NEW143771
[W32] windowsVersion() and osVersionForUAString() are outdated
https://bugs.webkit.org/show_bug.cgi?id=143771
Summary [W32] windowsVersion() and osVersionForUAString() are outdated
LRN
Reported 2015-04-15 06:33:19 PDT
../webkitgtk-2.4.8/Source/WebCore/platform/win/SystemInfo.cpp: In function 'WTF::String WebCore::osVersionForUAString()': ../webkitgtk-2.4.8/Source/WebCore/platform/win/SystemInfo.cpp:94:12: warning: enumeration value 'WindowsCE5' not handled in switch [-Wswitch] repeated for each unhandled value
Attachments
Update windowsVersion() and osVersionForUAString() (7.96 KB, patch)
2015-04-15 10:14 PDT, LRN
no flags
Update windowsVersion() and osVersionForUAString() (8.08 KB, patch)
2015-04-15 13:16 PDT, LRN
lrn1986: commit-queue?
LRN
Comment 1 2015-04-15 10:14:17 PDT
Created attachment 250818 [details] Update windowsVersion() and osVersionForUAString() Add support for newer Windows versions to windowsVersion(), handle all defined cases in osVersionForUAString(), avoiding warnings like ../webkitgtk-2.4.8/Source/WebCore/platform/win/SystemInfo.cpp: In function 'WTF::String WebCore::osVersionForUAString()': ../webkitgtk-2.4.8/Source/WebCore/platform/win/SystemInfo.cpp:94:12: warning: enumeration value 'WindowsCE5' not handled in switch [-Wswitch] repeated for each unhandled value
WebKit Commit Bot
Comment 2 2015-04-15 10:16:05 PDT
Attachment 250818 [details] did not pass style-queue: ERROR: Source/WebCore/platform/win/SystemInfo.cpp:74: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] ERROR: Source/WebCore/platform/win/SystemInfo.cpp:82: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebCore/ChangeLog:16: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
LRN
Comment 3 2015-04-15 13:16:32 PDT
Created attachment 250843 [details] Update windowsVersion() and osVersionForUAString() Add support for newer Windows versions to windowsVersion(), handle all defined cases in osVersionForUAString(), avoiding warnings like ../webkitgtk-2.4.8/Source/WebCore/platform/win/SystemInfo.cpp: In function 'WTF::String WebCore::osVersionForUAString()': ../webkitgtk-2.4.8/Source/WebCore/platform/win/SystemInfo.cpp:94:12: warning: enumeration value 'WindowsCE5' not handled in switch [-Wswitch] repeated for each unhandled value
Carlos Garcia Campos
Comment 4 2015-05-18 09:49:03 PDT
Csaba Osztrogonác
Comment 5 2015-09-14 11:14:20 PDT
Comment on attachment 250818 [details] Update windowsVersion() and osVersionForUAString() Cleared Darin Adler's review+ from obsolete attachment 250818 [details] so that this bug does not appear in http://webkit.org/pending-commit.
Note You need to log in before you can comment on or make changes to this bug.